# pap-datalab

./: .sqlfluff  README.md  pyproject.toml
data/education/: basic_education_institutions.parquet
data/geography/: administrative_regions.parquet  psgc_2025-08-07.csv
notebooks/: administrative_regions.ipynb  fuzzymatch.ipynb  psgc_administrative_regions.ipynb
pap_datalab/: __init__.py
sql/database/: psgc.sql
sql/superset_datasets/: distribution_of_population_per_settlement_type.sql
sql/table/: psgc.dim_administrative_area.sql  psgc.fact_population_by_administrative_area.sql
sql/table_definitions/: barangay.sql
