[project]
name = "pap-datalab"
version = "0.1.0"
description = "Datalab for PAP"
authors = [
    {name = "bendlikeabamboo",email = "mbalmeo32@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "jupyterlab (>=4.4.6,<5.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "polars (>=1.32.3,<2.0.0)",
    "barangay (>=0.3.3,<0.4.0)",
    "clickhouse-connect (>=0.8.18,<0.9.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "ruff (>=0.12.9,<0.13.0)",
    "sqlfluff (>=3.4.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
